--- a/styles/card.scss
+++ b/styles/card.scss
@@ -1,3 +1,6 @@
+$sans-font: "Source Sans 3";
+$monospace-font: "Source Code Pro";
+
 .card-view {
     width: 62mm;
 
@@ -74,7 +77,7 @@
             padding: 4px;
 
             font-size: 12px;
-            font-family: monospace;
+            font-family: $monospace-font;
 
             border-width: 1px;
             border-style: solid;
@@ -119,8 +122,8 @@
 
         align-items: center;
 
-        font-size: 14px;
-        font-family: sans-serif;
+        font-size: 16px;
+        font-family: $sans-font;
 
         border-width: 1px;
         border-style: solid;
