--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -1,5 +1,8 @@
 $border-radius: 3.5mm;
 
+$sans-font: "Source Sans 3";
+$monospace-font: "Source Code Pro";
+
 .editor-view {
     display: flex;
 
@@ -17,7 +20,7 @@ $border-radius: 3.5mm;
         padding: 4px;
 
         font-size: 14px;
-        font-family: monospace;
+        font-family: $monospace-font;
 
         border-width: 1px;
         border-style: solid;
@@ -72,7 +75,7 @@ $border-radius: 3.5mm;
             border-style: none;
 
             font-size: 14px;
-            font-family: monospace;
+            font-family: $monospace-font;
 
             padding-top: 8px;
             padding-left: 10px;
@@ -108,7 +111,7 @@ $border-radius: 3.5mm;
                 flex-grow: 1;
 
                 font-size: 14px;
-                font-family: monospace;
+                font-family: $monospace-font;
 
                 border-style: solid;
                 border-color: hsl(0, 0%, 70%);
@@ -139,8 +142,8 @@ $border-radius: 3.5mm;
 
             align-items: center;
 
-            font-size: 14px;
-            font-family: sans-serif;
+            font-size: 16px;
+            font-family: $sans-font;
 
             border-width: 1px;
             border-style: solid;
