--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -1,3 +1,6 @@
+$sans-font: "Source Sans 3";
+$monospace-font: "Source Code Pro";
+
 .sidebar-view {
     display: flex;
 
@@ -34,7 +37,7 @@
             user-select: none;
 
             font-size: 14px;
-            font-family: monospace;
+            font-family: $monospace-font;
 
             padding-top: 6px;
             padding-left: 10px;
@@ -56,9 +59,9 @@
             }
 
             .icon {
-                font-size: 12px;
+                font-size: 16px;
 
-                margin-right: 6px;
+                margin-right: 4px;
             }
         }
 
@@ -88,8 +91,8 @@
 
             align-items: center;
 
-            font-size: 18px;
-            font-family: sans-serif;
+            font-size: 20px;
+            font-family: $sans-font;
 
             border-width: 1px;
             border-style: solid;
@@ -108,6 +111,10 @@
                 border-color: hsl(0, 0%, 95%);
 
                 background-color: hsl(0, 0%, 95%);
+            }
+
+            span {
+                margin-top: 2px;
             }
         }
 
@@ -129,7 +136,7 @@
 
         .expand-button {
             span {
-                margin-top: -2px;
+                margin-top: -1px;
             }
         }
     }
