--- a/styles/toolbar.scss
+++ b/styles/toolbar.scss
@@ -1,3 +1,5 @@
+$sans-font: "Source Sans 3";
+
 .toolbar-view {
     padding: 8px;
 
@@ -21,7 +23,7 @@
 
         align-items: center;
 
-        font-family: sans-serif;
+        font-family: $sans-font;
 
         border-width: 1px;
         border-style: solid;
@@ -46,7 +48,7 @@
         }
 
         &.expand-cards-button {
-            font-size: 18px;
+            font-size: 20px;
 
             border-color: transparent;
 
