--- a/styles/card/note.scss
+++ b/styles/card/note.scss
@@ -57,6 +57,11 @@
         }
     }
 
+    code {
+        font-size: 11pt;
+        font-family: "Source Code Pro";
+    }
+
     .md {
         * {
             font-size: 10pt;
