Optional eager HTML

--- a/styles/card.scss
+++ b/styles/card.scss
@@ -52,6 +52,12 @@ $monospace-font: "Source Code Pro";
         }
     }
 
+    &.loading {
+        .card-container {
+            height: 88mm;
+        }
+    }
+
     &.show-binder {
         &.has-binder {
             .binder {
