--- a/styles/sidebar.scss
+++ b/styles/sidebar.scss
@@ -37,39 +37,77 @@ $monospace-font: "Source Code Pro";
         border-bottom-width: 1px;
         border-bottom-style: solid;
 
-        .binder {
+        .binder-container {
             user-select: none;
 
             font-size: 14px;
             font-family: $monospace-font;
 
-            padding-top: 6px;
-            padding-left: 10px;
-            padding-right: 10px;
-            padding-bottom: 6px;
+            .binder {
+                padding-top: 6px;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-bottom: 6px;
 
-            &:hover {
-                cursor: pointer;
+                .icon {
+                    font-size: 16px;
 
-                background-color: hsl(0, 0%, 95%);
-            }
-
-            &.selected {
-                &:hover {
-                    background-color: hsl(0, 0%, 90%);
+                    margin-right: 4px;
                 }
 
-                background-color: hsl(0, 0%, 95%);
+                &:hover {
+                    cursor: pointer;
+
+                    background-color: hsl(0, 0%, 95%);
+                }
+
+                &.selected {
+                    &:hover {
+                        background-color: hsl(0, 0%, 90%);
+                    }
+
+                    background-color: hsl(0, 0%, 95%);
+                }
             }
 
-            .icon {
-                font-size: 16px;
+            .dividers {
+                .divider {
+                    padding-top: 6px;
+                    padding-left: 25px;
+                    padding-right: 10px;
+                    padding-bottom: 6px;
 
-                margin-right: 4px;
+                    border-top-width: 1px;
+                    border-top-style: solid;
+                    border-top-color: hsl(0, 0%, 90%);
+
+                    &:hover {
+                        cursor: pointer;
+
+                        background-color: hsl(0, 0%, 95%);
+                    }
+
+                    &.color {
+                        padding-right: 6px;
+
+                        .name {
+                            width: 100%;
+                            height: 1.2em;
+                        }
+                    }
+
+                    &.selected {
+                        &:hover {
+                            background-color: hsl(0, 0%, 90%);
+                        }
+
+                        background-color: hsl(0, 0%, 95%);
+                    }
+                }
             }
         }
 
-        .binder + .binder {
+        .binder-container + .binder-container {
             border-top-width: 1px;
             border-top-style: solid;
             border-top-color: hsl(0, 0%, 90%);
