--- a/views/app.slim
+++ b/views/app.slim
@@ -17,6 +17,8 @@ link rel="stylesheet" href="/styles/card/japanese/words.css"
 link rel="stylesheet" href="/styles/card/japanese/phrases.css"
 
 input id="print" type="hidden" value=('true' if @print)
+
 input id="binder_id" type="hidden" value=@binder_id
+input id="divider_id" type="hidden" value=@divider_id
 
 script src="/views/app.rb"
