--- a/styles/card/note.scss
+++ b/styles/card/note.scss
@@ -12,7 +12,7 @@
         font-family: "Source Serif 4";
     }
 
-    h2, h3, h4, p, ul, ol {
+    h2, h3, h4, p, ul, ol, table {
         margin-bottom: 4pt;
     }
 
