--- a/styles/card/note.scss
+++ b/styles/card/note.scss
@@ -70,7 +70,7 @@
 
         thead {
             tr {
-                border-bottom-width: 1px;
+                border-bottom-width: 1pt;
                 border-bottom-style: solid;
                 border-bottom-color: black;
 
@@ -82,7 +82,7 @@
 
         tr {
             td, th {
-                padding-right: 4px;
+                padding-right: 2pt;
 
                 p {
                     margin: 0;
@@ -90,9 +90,9 @@
             }
 
             td + td, th + th {
-                padding-left: 4px;
+                padding-left: 2pt;
 
-                border-left-width: 1px;
+                border-left-width: 1pt;
                 border-left-style: solid;
                 border-left-color: black;
             }
@@ -100,7 +100,7 @@
 
         tr + tr {
             td {
-                border-top-width: 1px;
+                border-top-width: 1pt;
                 border-top-style: solid;
                 border-top-color: black;
             }
