--- a/styles/toolbar.scss
+++ b/styles/toolbar.scss
@@ -9,7 +9,7 @@ $sans-font: "Source Sans 3";
 
     flex-direction: row;
 
-    justify-content: end;
+    justify-content: space-between;
 
     background-color: hsl(0, 0%, 95%);
 
@@ -39,6 +39,26 @@ $sans-font: "Source Sans 3";
             background-color: hsl(0, 0%, 90%);
         }
 
+        &.print-button {
+            font-size: 20px;
+
+            border-color: transparent;
+
+            &.selected {
+                background-color: hsl(0, 0%, 90%);
+            }
+        }
+
+        &.expand-button {
+            font-size: 20px;
+
+            border-color: transparent;
+
+            &.selected {
+                background-color: hsl(0, 0%, 90%);
+            }
+        }
+
         &.new-card-button {
             font-size: 26px;
 
@@ -62,5 +82,21 @@ $sans-font: "Source Sans 3";
                 margin-top: 2px;
             }
         }
+    }
+
+    .left-buttons {
+        display: flex;
+
+        column-gap: 8px;
+
+        flex-direction: row;
+    }
+
+    .right-buttons {
+        display: flex;
+
+        column-gap: 8px;
+
+        flex-direction: row;
     }
 }
