--- a/views/app.slim
+++ b/views/app.slim
@@ -16,7 +16,7 @@ link rel="stylesheet" href="/styles/card/italian/phrases.css"
 link rel="stylesheet" href="/styles/card/japanese/words.css"
 link rel="stylesheet" href="/styles/card/japanese/phrases.css"
 
-input id="print" type="hidden" value=('true' if @print)
+input id="printed" type="hidden" value=@printed
 input id="binder_id" type="hidden" value=@binder_id
 
 script src="/views/app.rb"
