--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -10,4 +10,10 @@
     justify-content: start;
 
     grid-template-columns: repeat(auto-fill, auto);
+
+    &.cards-expand {
+        .card-container {
+            height: 88mm;
+        }
+    }
 }
