Fix toolbar button classes

--- a/styles/toolbar.scss
+++ b/styles/toolbar.scss
@@ -39,7 +39,7 @@ $sans-font: "Source Sans 3";
             background-color: hsl(0, 0%, 90%);
         }
 
-        &.new-card-button {
+        &.card-new-button {
             font-size: 26px;
 
             border-color: hsl(0, 0%, 80%);
@@ -49,7 +49,7 @@ $sans-font: "Source Sans 3";
             }
         }
 
-        &.expand-cards-button {
+        &.cards-expand-button {
             font-size: 20px;
 
             border-color: transparent;
