Show binder when in home state

--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -12,8 +12,20 @@
     grid-template-columns: repeat(auto-fill, auto);
 
     &.cards-expand {
-        .card-container {
-            height: 88mm;
+        .card-view {
+            .card-container {
+                height: 88mm;
+            }
+        }
+    }
+
+    &.show-binders {
+        .card-view {
+            .binder {
+                display: block;
+
+                position: relative;
+            }
         }
     }
 }
