--- a/styles/app.scss
+++ b/styles/app.scss
@@ -55,14 +55,12 @@ body {
         flex-grow: 1;
         flex-direction: row;
 
-        .cards-view {
+        .cards-container {
             overflow: auto;
 
             flex-grow: 1;
 
             min-height: 0;
-
-            box-sizing: border-box;
         }
 
         .sidebar-view {
