Improve note style

--- a/styles/card/note.scss
+++ b/styles/card/note.scss
@@ -130,6 +130,10 @@
         ul {
             padding-left: 4mm;
         }
+
+        ol {
+            padding-left: 3mm;
+        }
     }
 
     .xs {
