--- a/views/card/japanese/phrases.slim
+++ b/views/card/japanese/phrases.slim
@@ -3,7 +3,7 @@ div.card.japanese.phrases
     div.phrase
       div.japanese
         - phrase[:japanese].each do |section|
-          div.section class=('bold' if section[:bold]) class=("color color-#{section[:color][:name]}" if section[:color])
+          div.section class=("color color-#{section[:color][:name]}" if section[:color])
             ruby:
               if section[:bold]
                 text = section[:bold][:text]
