Clean up italian cards

--- a/views/card/italian/words.slim
+++ b/views/card/italian/words.slim
@@ -1,4 +1,4 @@
 div.card.italian.words
   - @words.each do |word|
     div.word class=("color color-#{word[:color]}" if word[:color])
-      = word[:italian]
+      = word[:word]
