Fix sidebar scroll

--- a/styles/print.scss
+++ b/styles/print.scss
@@ -43,7 +43,7 @@
                 }
             }
 
-            .sidebar-view {
+            .sidebar-container {
                 display: none;
             }
         }
