--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -56,6 +56,8 @@ $monospace-font: "Source Code Pro";
     }
 
     .text {
+        display: flex;
+
         flex-grow: 1;
 
         border-width: 1px;
@@ -63,29 +65,21 @@ $monospace-font: "Source Code Pro";
         border-color: hsl(0, 0%, 70%);
         border-radius: $border-radius;
 
-        padding-bottom: 8px;
+        flex-direction: column;
 
-        &:has(textarea:focus) {
-            border-color: hsl(0, 0%, 50%);
-        }
+        .vi-view {
+            padding: 8px;
 
-        textarea {
-            width: 100%;
-            height: 100%;
+            flex-grow: 1;
 
-            resize: none;
-
-            border-style: none;
+            overflow-x: auto;
+            overflow-y: auto;
 
             font-size: 14px;
             font-family: $monospace-font;
 
-            padding-top: 8px;
-            padding-left: 10px;
-            padding-right: 10px;
-
-            &:focus {
-                outline: none;
+            .status-bar {
+                display: none;
             }
         }
     }
