--- a/views/app.slim
+++ b/views/app.slim
@@ -1,3 +1,5 @@
+link rel="stylesheet" href="/styles/vi.css"
+
 link rel="stylesheet" href="/styles/app.css"
 link rel="stylesheet" href="/styles/card.css"
 link rel="stylesheet" href="/styles/cards.css"
