--- a/styles/vi.scss
+++ b/styles/vi.scss
@@ -6,20 +6,22 @@
     justify-content: space-between;
 
     &.insert-mode {
-        .lines {
-            .line {
-                .character {
-                    &.cursor {
-                        color: initial;
+        .lines-container {
+            .lines {
+                .line {
+                    .character {
+                        &.cursor {
+                            color: initial;
 
-                        background-color: initial;
+                            background-color: initial;
 
-                        border-left-width: 1px;
-                        border-left-style: solid;
-                        border-left-color: black;
+                            border-left-width: 1px;
+                            border-left-style: solid;
+                            border-left-color: black;
 
-                        &.last {
-                            width: 0;
+                            &.last {
+                                width: 0;
+                            }
                         }
                     }
                 }
@@ -27,30 +29,42 @@
         }
     }
 
-    .lines {
-        .line {
-            display: flex;
+    .lines-container {
+        .lines {
+            .line {
+                display: flex;
 
-            flex-direction: row;
-
-            .character {
-                height: 1.4em;
-
-                display: inline-flex;
-
-                line-height: 1em;
-
-                align-items: center;
-
-                flex-shrink: 0;
                 flex-direction: row;
 
-                &.cursor {
-                    color: white;
+                .character {
+                    height: 1.4em;
 
-                    background-color: black;
+                    display: inline-flex;
+
+                    line-height: 1em;
+
+                    align-items: center;
+
+                    flex-shrink: 0;
+                    flex-direction: row;
+
+                    &.cursor {
+                        color: white;
+
+                        background-color: black;
+                    }
                 }
             }
         }
+    }
+
+    .status-bar {
+        display: flex;
+
+        column-gap: 8px;
+
+        flex-direction: row;
+
+        justify-content: space-between;
     }
 }
