--- a/styles/vi.scss
+++ b/styles/vi.scss
@@ -36,6 +36,10 @@
     }
 
     .lines {
+        display: flex;
+
+        flex-direction: column;
+
         .line {
             display: flex;
 
