--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -72,8 +72,6 @@ $monospace-font: "Source Code Pro";
         }
 
         .vi-view {
-            padding: 8px;
-
             flex-grow: 1;
 
             min-height: 0;
@@ -86,6 +84,8 @@ $monospace-font: "Source Code Pro";
             }
 
             .lines {
+                padding: 8px;
+
                 flex-grow: 1;
 
                 overflow-x: auto;
@@ -95,9 +95,15 @@ $monospace-font: "Source Code Pro";
             }
 
             .status-bar {
+                padding: 8px;
+
                 flex-grow: 0;
 
                 padding-top: 8px;
+
+                border-top-width: 1px;
+                border-top-style: solid;
+                border-top-color: hsl(0, 0%, 90%);
             }
         }
     }
