--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -84,7 +84,9 @@ $monospace-font: "Source Code Pro";
             }
 
             .lines {
-                padding: 8px;
+                padding-top: 8px;
+                padding-left: 8px;
+                padding-right: 8px;
 
                 flex-grow: 1;
 
@@ -98,6 +100,8 @@ $monospace-font: "Source Code Pro";
                 padding: 8px;
 
                 flex-grow: 0;
+
+                margin-top: 8px;
 
                 padding-top: 8px;
 
