--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -154,6 +154,8 @@ $monospace-font: "Source Code Pro";
 
             justify-content: center;
 
+            background-color: white;
+
             &:hover {
                 cursor: pointer;
 
