--- a/styles/vi.scss
+++ b/styles/vi.scss
@@ -1,9 +1,9 @@
 .vi-view {
     display: flex;
 
-    flex-direction: column;
+    min-height: 0;
 
-    justify-content: space-between;
+    flex-direction: column;
 
     &.insert-mode {
         &:focus {
@@ -38,6 +38,10 @@
     .lines {
         display: flex;
 
+        overflow-x: auto;
+        overflow-y: auto;
+
+        flex-grow: 1;
         flex-direction: column;
 
         .line {
@@ -65,6 +69,7 @@
 
         column-gap: 8px;
 
+        flex-grow: 0;
         flex-direction: row;
 
         justify-content: space-between;
