--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -72,6 +72,8 @@ $monospace-font: "Source Code Pro";
         }
 
         .vi-view {
+            row-gap: 8px;
+
             flex-grow: 1;
 
             font-size: 14px;
@@ -91,8 +93,6 @@ $monospace-font: "Source Code Pro";
 
             .status-bar {
                 padding: 8px;
-
-                margin-top: 8px;
 
                 padding-top: 8px;
 
