--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -67,7 +67,7 @@ $monospace-font: "Source Code Pro";
 
         flex-direction: column;
 
-        &:has(.vi-view:focus) {
+        &:has(.vi-view:focus, .vi-view .cursor:focus) {
             border-color: hsl(0, 0%, 50%);
         }
 
@@ -83,18 +83,45 @@ $monospace-font: "Source Code Pro";
                 outline: none;
             }
 
+            &.insert-mode {
+                .cursor {
+                    height: 1.4em;
+
+                    font-size: 14px;
+                    font-family: "Source Code Pro";
+                }
+            }
+
+            &.normal-mode {
+                &:focus {
+                    .cursor {
+                        background-color: black;
+                    }
+                }
+
+                .cursor {
+                    color: white;
+
+                    background-color: hsl(0, 0, 50%);
+                }
+            }
+
             .lines {
                 padding-top: 8px;
                 padding-left: 8px;
                 padding-right: 8px;
 
                 background-color: white;
+
+                .character {
+                    height: 1.4em;
+                }
             }
 
             .status-bar {
                 padding: 8px;
 
-                padding-top: 8px;
+                column-gap: 8px;
 
                 border-top-width: 1px;
                 border-top-style: solid;
