--- a/styles/editor.scss
+++ b/styles/editor.scss
@@ -102,7 +102,7 @@ $monospace-font: "Source Code Pro";
                 .cursor {
                     color: white;
 
-                    background-color: hsl(0, 0, 50%);
+                    background-color: hsl(0, 0%, 50%);
                 }
             }
 
