--- a/styles/card/study.scss
+++ b/styles/card/study.scss
@@ -31,15 +31,25 @@
     }
 
     h3 {
-        font-size: 7pt;
+        font-size: 8pt;
     }
 
     h4 {
+        font-size: 7pt;
+    }
+
+    h5 {
+        font-size: 6pt;
+    }
+
+    h6 {
         font-size: 5pt;
     }
 
     p {
         text-align: justify;
+
+        line-height: 1;
     }
 
     ul {
