--- a/styles/cards.scss
+++ b/styles/cards.scss
@@ -1,10 +1,11 @@
 .cards-view {
+    gap: 16px;
+
     padding: 16px;
 
-    column-gap: 16px;
-    column-fill: balance;
-    column-width: 62mm;
-    column-count: auto;
+    display: grid;
+
+    grid-template-columns: repeat(auto-fill, 62mm);
 
     &.cards-expand {
         .card-view {
@@ -22,11 +23,5 @@
                 position: relative;
             }
         }
-    }
-
-    .card-view {
-        break-inside: avoid;
-
-        margin-bottom: 16px;
     }
 }
